Sync all content

--- a/content/resources/mit18_650f16_glm.md
+++ b/content/resources/mit18_650f16_glm.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 83f9dd4c-6461-4557-15ae-ef55103db1f9
 resourcetype: Document
 title: '18.650 (F16) Lecture 10: Generalized Linear Models (GLMs)'
 uid: dff89368-051a-5fea-e72b-39c6422d0752
