--- a/content/resources/mit18_650f16_pca.md
+++ b/content/resources/mit18_650f16_pca.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Slides
 parent_type: CourseSection
+parent_uid: 83f9dd4c-6461-4557-15ae-ef55103db1f9
 resourcetype: Document
 title: '18.650 (F16) Lecture 9: Principal Component Analysis (PCA)'
 uid: d85e1a9d-1131-42ad-e8ce-5e4f5ef0b4e8
