--- a/content/resources/mit18_650f16_pset10.md
+++ b/content/resources/mit18_650f16_pset10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 10
 uid: ff133adc-f695-5bca-efce-c1ea49014008
