--- a/content/resources/18-650f16.md
+++ b/content/resources/18-650f16.md
@@ -1,16 +1,23 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/18-650-statistics-for-applications-fall-2016/de1506da626801272f3f35bb8412e638_18-650f16.jpg
+file: /courses/18-650-statistics-for-applications-fall-2016/de1506da626801272f3f35bb8412e638_18-650f16.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: "\_ \_ Nonparametric regression. (Image by Prof. Philippe Rigollet.)\n\n\
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Verdana; color: #2d2d2d}"
+  caption: Nonparametric regression. (Image by Prof. Philippe Rigollet.)
   credit: Image by Prof. Philippe Rigollet.
   image-alt: 2D plot for data fitting.
 learning_resource_types: []
-ocw_type: OCWImage
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Image
 title: 18-650f16.jpg
 uid: de1506da-6268-0127-2f3f-35bb8412e638
+video_files:
+  video_captions_file: ''
+  video_thumbnail_file: ''
+  video_transcript_file: ''
+video_metadata:
+  video_speakers: ''
+  video_tags: ''
+  youtube_id: ''
 ---
