--- a/content/resources/18-650f16-th.md
+++ b/content/resources/18-650f16-th.md
@@ -1,11 +1,11 @@
 ---
 content_type: resource
 description: ''
+draft: false
 file: /courses/18-650-statistics-for-applications-fall-2016/74db411931d854f5d22678b891acf562_18-650f16-th.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: "\_ \_ Nonparametric regression. (Image by Prof. Philippe Rigollet.)\n\n\
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Verdana; color: #2d2d2d}"
+  caption: "\_ \_ Nonparametric regression. (Image by Prof. Philippe Rigollet.)"
   credit: Image by Prof. Philippe Rigollet.
   image-alt: 2D plot for data fitting.
 learning_resource_types: []
@@ -14,4 +14,13 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 18-650f16-th.jpg
 uid: 74db4119-31d8-54f5-d226-78b891acf562
+video_files:
+  video_captions_file: ''
+  video_thumbnail_file: ''
+  video_transcript_file: ''
+video_metadata:
+  video_speakers: ''
+  video_tags: ''
+  youtube_description: ''
+  youtube_id: ''
 ---
