Sync all content

--- a/content/resources/18-650f16-th.md
+++ b/content/resources/18-650f16-th.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 draft: false
 file: /courses/18-650-statistics-for-applications-fall-2016/74db411931d854f5d22678b891acf562_18-650f16-th.jpg
+file_size: 2654
 file_type: image/jpeg
 image_metadata:
   caption: "\_ \_ Nonparametric regression. (Image by Prof. Philippe Rigollet.)"
